--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,9 +17,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: [3.6, 3.7, 3.8, 3.9, "pypy-3.7"]
         os: [ubuntu-latest, macos-latest]
         platform: [x64]
+        exclude:
+          - platform: macos-latest
+            python-version: "pypy-3.7"
     env:
       REPO_DIR: "."
       PLAT: "x86_64"
